refactor: implement CLI commands and extract reader god classes
Implement InspectCommand, DiffCommand, and BrowseCommand replacing
TODO stubs with full functionality mirroring the REST API endpoints.

Extract GenericStateReader (553 lines) into SstFileProcessor,
HandleResolver. Extract OperatorStateReader (496 lines) into
OperatorStateEntryReader, StructuredFieldParser. Original classes
remain as thin facades with unchanged public APIs.